# contrast_renderer

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  index.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: actions.yml
examples/: application_framework.rs
examples/keymaps/: de_macos.txt
examples/showcase/: index.html  main.rs  server.js
examples/ui/: main.rs
src/: complex_number.rs  convex_hull.rs  curve.rs  error.rs  fill.rs  lib.rs  path.rs  path_builder.rs  polynomial.rs  renderer.rs  safe_float.rs  shaders.wgsl  stroke.rs  text.rs  utils.rs  vertex.rs
src/shader/: cover_solid.frag  fill_solid.frag  segment0.vert  segment0f.vert  segment2.vert  segment2f.vert  segment2f1i.vert  segment3.vert  segment3f.vert  segment3f1i.vert  segment4.vert  segment4f.vert  stencil_integral_cubic_curve.frag  stencil_integral_quadratic_curve.frag  stencil_rational_cubic_curve.frag  stencil_rational_quadratic_curve.frag  stencil_solid.frag  stencil_stroke_joint.frag  stencil_stroke_line.frag
src/shader/include/: stencil_sample_rate_shading.glsl  stroke_dashed.glsl  vertex_transform.glsl
src/ui/: button.rs  checkbox.rs  dropdown.rs  label.rs  list.rs  message.rs  mod.rs  node_hierarchy.rs  overlay.rs  range.rs  renderer.rs  scroll.rs  speech_balloon.rs  tabs.rs  wrapped_values.rs
