[package]
resolver = "2"
name = "contrast_renderer"
version = "0.1.2"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
description = "A web-gpu based 2D render engine"
repository = "https://github.com/Lichtso/contrast_renderer/"
keywords = ["2d", "graphics", "geometry", "bezier"]
license = "MIT"
edition = "2018"

[features]
default = ["text"]
text = ["ttf-parser"]

[dependencies]
wgpu = { version = "0.14.0" }
geometric_algebra = "0.2.0"
ttf-parser = { version = "0.14.0", optional = true }



### Showcase Example ###

[dev-dependencies]
winit = { version = "0.27.0" }
log = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-executor = "1.0"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
