[package]
resolver = "2"
name = "contrast_renderer"
version = "0.1.3"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
description = "A web-gpu based 2D render engine"
repository = "https://github.com/Lichtso/contrast_renderer/"
keywords = ["2d", "graphics", "geometry", "bezier"]
license = "MIT"
edition = "2018"

[features]
default = ["text"]
text = ["ttf-parser"]

[dependencies]
wgpu = { version = "0.17.0" }
geometric_algebra = "0.3.0"
ttf-parser = { version = "0.14.0", optional = true }



### Showcase Example ###

[dev-dependencies]
winit = { version = "0.27.0" }
log = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-executor = "1.0"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = "0.3.64"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = "0.1.7"
console_log = "0.1.2"
